--- a/программа/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/программа/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -108,6 +108,12 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Столбец\Столбец.csproj">
+      <Project>{b4c73602-3647-4aea-b588-aedc87a7fde8}</Project>
+      <Name>Столбец</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
